--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Aug 29 20:55:30 MSK 2015
-sdk.dir=C\:\\Users\\admin\\AppData\\Local\\Android\\sdk
+#Wed Sep 09 19:26:39 MSK 2015
+sdk.dir=C\:\\Documents and Settings\\piter\\AppData\\Local\\Android\\sdk
